# arb-fft

./: .ghc.environment.x86_64-linux-8.6.3  .gitignore  CHANGELOG.markdown  LICENSE  README.markdown  Setup.hs  arb-fft.cabal  cabal.project.local
Numeric/: FFT.hs
Numeric/FFT/: Base.hs  Execute.hs  Plan.hs  Special.hs  Types.hs  Utils.hs
Numeric/FFT/Special/: Miscellaneous.hs  PowersOfTwo.hs  Primes.hs
doc-formulae/: Makefile  fft-formula.tex  ifft-formula.tex  texfoot.tex  texhead.tex
test/: basic-test.hs  profile-256.hs
