name:                arb-fft
version:             0.1.0.0
synopsis:            Pure Haskell arbitrary length FFT library
-- description:
homepage:            https://github.com/ian-ross/arb-fft
license:             GPL-3
license-file:        LICENSE
author:              Ian Ross
maintainer:          ian@skybluetrades.net
copyright:           Copyright (2013) Ian Ross
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Numeric.FFT
                       Numeric.FFT.Plan
                       Numeric.FFT.Execute
                       Numeric.FFT.Base
                       Numeric.FFT.Types
                       Numeric.FFT.Utils
  -- other-modules:
  build-depends:       base                        >= 4.6      && < 5,
                       containers                  >= 0.5.0.0  && < 0.6,
                       vector                      >= 0.10.9.1 && < 0.11
  default-language:    Haskell2010
